# BIS_RISK_ANALYTICS

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
data/: synthetic_portfolio.csv  synthetic_yield_curve.csv
data/docs/: fixed_income_risk_notes.md  model_governance_notes.md  stress_testing_notes.md
docs/: deployment_guide.md  interview_followup_note.md  technical_note.md
notebooks/: prototype_walkthrough.ipynb
src/cbrap/: __init__.py  abm.py  fixed_income.py  monte_carlo.py  portfolio.py  rag.py  risk_metrics.py  scenarios.py  utils.py
tests/: test_abm.py  test_fixed_income.py  test_risk_metrics.py
